Summary of important user-visible changes for image 2.0.1:
-------------------------------------------------------------------

 ** The plot produced by `imhist' is correctly scaled on the X axis so that the
    colorbar corresponds to the actual intensity of the stems; the given
    colormarp is used on the colorbar for indexed images; and the stems no
    longer display the markers at their top.

 ** The `fftconv2' usage "fftconv2 (v1, v2, a)", for convolution of a matrix by
    one vector in the column direction and another vector in the row direction,
    has been removed. Please use conv2 for such cases.

Summary of important user-visible changes for image 2.0.0:
-------------------------------------------------------------------

 ** The following functions are new:

      analyze75info         imabsdiff         iptcheckconn
      analyze75read         imadd             iptcheckmap
      analyze75write        imbothat          iptchecknargin
      blockproc             imcrop            iptcheckstrs
      bwlabeln              imdivide          iptnum2ordinal
      getrangefromclass     imlincomb         iscolormap
      im2int16              immultiply        normxcorr2
      im2single             imsubtract        wavelength2rgb

 ** The following functions have been deprecated in previous releases
    of the image package and have now been removed:

      imginfo

 ** The function `deriche' has been removed.

 ** The complete set of functions to work with Analyze 7.5 files has been
    implemented. See `analyze75info', `analyze75read' and `analyze75write'.

 ** `graythresh' can optionally accept an histogram rather than an image.  This
    allows for preprocessing of the histogram previous to an automatic threshold
    selection.

 ** Otsu's method for automatic threshold selection (default for `graythresh')
    has been completely rewritten and should perform faster. Now, it can also
    return a second value representing the ``goodness'' of the computed